# Deepstream_Pratice

./: .gitignore  .gitmodules  README.md
Deepstream_cpp/: Readme.md
Deepstream_cpp/Base_1/: Makefile  main.cpp  pgie_config.txt
Deepstream_cpp/Custom/: Makefile  ds_header.h  dstest1_pgie_config.txt  main.cpp  nvds_box_parser.cpp  nvds_box_parser.h
Deepstream_cpp/Custom/nvds_custom_infer_impl/: Makefile  nvds_box_parser.cpp
Deepstream_cpp/Deepstream_test1/: Makefile  Readme.md  config.txt  deepstream-test1-app  main.c
Deepstream_cpp/Deepstream_test2/: Makefile  main.c  pgie_config.txt  sgie1_config.txt  sgie2_config.txt  sgie3_config.txt
Deepstream_cpp/sample_cpp/: Readme.md
Deepstream_cpp/sample_cpp/example_1/: CMakeLists.txt  main.cpp
Deepstream_python/: Readme.md
Deepstream_python/Deepstream_test1/: config.txt  main.py
Deepstream_python/Deepstream_test1_alex/: config.txt  main.py
Deepstream_python/Deepstream_test1_pgie/: config.txt  main.py
Deepstream_python/Deepstream_test1_yolox/: config.txt  main.py
Deepstream_python/Deepstream_test2/: tracker_config.txt
Deepstream_python/Deepstream_test_base/: main.py  pgie_config.txt
Deepstream_python/deepstream-ssd-parser/: deepstream_ssd_parser.py  dstest_ssd_nopostprocess.txt  ssd_parser.py
Docs/: Docs.md
Mix_Cpp_C/: Readme.md  c_header.h  cpp_function.cpp  cpp_header.h  main.c
YoloX_Deepstream/: Dockerfile  Install.md  Readme.md  config_infer_primary.txt  deepstream_app_config.txt
YoloX_Deepstream/nvds_custom_infer_impl/: Makefile
dockers/: From_sdk  Readme.md  deepstream_60
